cards fixed wrapped in <a>tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1923,12 +1923,14 @@ body {
   gap: 30px;
   padding: 30px 0 0;
 }
+
 .aboutus-profile-card {
   position: relative;
   max-width: 297px;
   width: 100%;
+  border-radius: 15px;
 }
-.aboutus-profile-card > img {
+.aboutus-profile-img > img {
   border-radius: 15px;
 }
 .plus-button {
@@ -2903,7 +2905,7 @@ body {
 .ourteam-profile-card {
   position: relative;
 }
-.ourteam-profile-card > img {
+.ourteam-profile-img > img {
   border-radius: 15px;
   justify-items: center;
 }
